[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/disabled_button.tres" type="StyleBox" id=1]
[ext_resource path="res://themes/pressed_button.tres" type="StyleBox" id=2]
[ext_resource path="res://themes/unselected_button.tres" type="StyleBox" id=3]
[ext_resource path="res://themes/selected_button.tres" type="StyleBox" id=4]
[ext_resource path="res://scripts/goBackBtn.gd" type="Script" id=5]

[node name="goBackButton" type="Button"]
margin_right = 89.0
margin_bottom = 24.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "MENU"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
referance_path = "res://UI/TitleScreen.tscn"

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
